switch string formatting method to be compatible with csa machines